# apps/api/openapi-v2.json
@@ -3446,45 +3446,6 @@
           }
         ]
       },
-      "ConcurrencyCheckResponse": {
-        "anyOf": [
-          {
-            "type": "object",
-            "properties": {
-              "success": {
-                "type": "boolean",
-                "const": false
-              },
-              "code": {
-                "type": "string"
-              },
-              "error": {
-                "type": "string"
-              },
-              "details": {}
-            },
-            "required": ["success", "error"],
-            "additionalProperties": false
-          },
-          {
-            "type": "object",
-            "properties": {
-              "success": {
-                "type": "boolean",
-                "const": true
-              },
-              "concurrency": {
-                "type": "number"
-              },
-              "maxConcurrency": {
-                "type": "number"
-              }
-            },
-            "required": ["success", "concurrency", "maxConcurrency"],
-            "additionalProperties": false
-          }
-        ]
-      },
       "ScrapeResponse": {
         "type": "object",
         "properties": {
@@ -3561,7 +3522,7 @@
     "/scrape": {
       "post": {
         "tags": ["Scraping"],
-        "operationId": "v2Scrape",
+        "operationId": "Scrape",
         "security": [
           {
             "bearerAuth": []
@@ -3594,7 +3555,7 @@
     "/scrape/{jobId}": {
       "get": {
         "tags": ["Scraping"],
-        "operationId": "v2ScrapeStatus",
+        "operationId": "Scrape Status",
         "security": [
           {
             "bearerAuth": []
@@ -3629,7 +3590,7 @@
     "/batch/scrape": {
       "post": {
         "tags": ["Scraping"],
-        "operationId": "v2BatchScrape",
+        "operationId": "Batch Scrape",
         "security": [
           {
             "bearerAuth": []
@@ -3662,7 +3623,7 @@
     "/batch/scrape/{jobId}": {
       "get": {
         "tags": ["Scraping"],
-        "operationId": "v2BatchScrapeStatus",
+        "operationId": "Batch Scrape Status",
         "security": [
           {
             "bearerAuth": []
@@ -3695,7 +3656,7 @@
       },
       "delete": {
         "tags": ["Scraping"],
-        "operationId": "v2BatchScrapeCancel",
+        "operationId": "Batch Scrape Cancel",
         "security": [
           {
             "bearerAuth": []
@@ -3730,7 +3691,7 @@
     "/batch/scrape/{jobId}/errors": {
       "get": {
         "tags": ["Scraping"],
-        "operationId": "v2BatchScrapeErrors",
+        "operationId": "Batch Scrape Errors",
         "security": [
           {
             "bearerAuth": []
@@ -3765,7 +3726,7 @@
     "/search": {
       "post": {
         "tags": ["Search"],
-        "operationId": "v2Search",
+        "operationId": "Search",
         "security": [
           {
             "bearerAuth": []
@@ -3798,7 +3759,7 @@
     "/map": {
       "post": {
         "tags": ["Mapping"],
-        "operationId": "v2Map",
+        "operationId": "Map",
         "security": [
           {
             "bearerAuth": []
@@ -3831,7 +3792,7 @@
     "/crawl": {
       "post": {
         "tags": ["Crawling"],
-        "operationId": "v2Crawl",
+        "operationId": "Crawl",
         "security": [
           {
             "bearerAuth": []
@@ -3864,7 +3825,7 @@
     "/crawl/{jobId}": {
       "get": {
         "tags": ["Crawling"],
-        "operationId": "v2CrawlStatus",
+        "operationId": "Crawl Status",
         "security": [
           {
             "bearerAuth": []
@@ -3897,7 +3858,7 @@
       },
       "delete": {
         "tags": ["Crawling"],
-        "operationId": "v2CrawlCancel",
+        "operationId": "Crawl Cancel",
         "security": [
           {
             "bearerAuth": []
@@ -3932,7 +3893,7 @@
     "/crawl/{jobId}/errors": {
       "get": {
         "tags": ["Crawling"],
-        "operationId": "v2CrawlErrors",
+        "operationId": "Crawl Errors",
         "security": [
           {
             "bearerAuth": []
@@ -3967,7 +3928,7 @@
     "/crawl/ongoing": {
       "get": {
         "tags": ["Crawling"],
-        "operationId": "v2CrawlOngoing",
+        "operationId": "Crawl Ongoing",
         "security": [
           {
             "bearerAuth": []
@@ -3990,7 +3951,7 @@
     "/crawl/active": {
       "get": {
         "tags": ["Crawling"],
-        "operationId": "v2CrawlActive",
+        "operationId": "Crawl Active",
         "security": [
           {
             "bearerAuth": []
@@ -4013,7 +3974,7 @@
     "/extract": {
       "post": {
         "tags": ["Extract"],
-        "operationId": "v2Extract",
+        "operationId": "Extract",
         "security": [
           {
             "bearerAuth": []
@@ -4046,7 +4007,7 @@
     "/agent": {
       "post": {
         "tags": ["Agent"],
-        "operationId": "v2Agent",
+        "operationId": "Agent",
         "security": [
           {
             "bearerAuth": []
@@ -4079,7 +4040,7 @@
     "/agent/{jobId}": {
       "get": {
         "tags": ["Agent"],
-        "operationId": "v2AgentStatus",
+        "operationId": "Agent Status",
         "security": [
           {
             "bearerAuth": []
@@ -4112,7 +4073,7 @@
       },
       "delete": {
         "tags": ["Agent"],
-        "operationId": "v2AgentCancel",
+        "operationId": "Agent Cancel",
         "security": [
           {
             "bearerAuth": []
